[package]
name = "buidl-rs"
version = "0.1.0"
authors = ["Paul Miller <paul@pauljmiller.com>"]
edition = "2018"

[dependencies]
rand = "0.4.3"
sha2 = "0.8.0"
rustc-serialize = "0.3.24"
arrayref = "0.3.5"
uuid = { version = "0.7.1", features = ["v4"]}
secp256k1 = {version = "0.11.2", features = ["rand"]}
hex-literal = "0.1.1"
hex = "0.3.2"
